frontend/styles/components/TopLeftNav.module.scss
$background-color: #3d0655;

.top-bar {
    background-color: $background-color;
    color: #fff;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 100;
    height: 60px;
    border-bottom-right-radius: 20px;
    border: 1px solid rgb(89, 27, 235);
    display: flex;
    justify-content: space-between;
    align-items: center;
    .top_logo {
        z-index: 101;
        margin-left: 13px;
        display: flex;
        justify-content: center;
        align-items: center;
    }
    .top_search {
        margin-bottom: 4px;
        width: 377px;
        height: 46px;
        border-radius: 11px;
        border-bottom: 90%;
        background: #180221;
        display: flex;
        justify-content: center;
        align-items: center;
        gap: 10px;

        input {
            height: 100%;
            width: 250px;
            background: transparent;
            border: none;
            color: #adadad;
            font-size: 16px;
            outline: none;
        }

        .search_icon {
            filter: invert(50%);
            font-size: 22px;
        }
    }
    .top_notif {
        margin-right: 35px;
    }
    img {
        &:hover {
            cursor: pointer;
            transform: scale(1.2);
            transition: all 0.3s ease-in-out;
        }
    }
}

.left-bar {
    @extend .top-bar;
    z-index: 99;
    width: 60px;
    height: 100%;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;

    .left_menu {
        display: flex;
        flex-direction: column;
        gap: 3rem;
    }
    .left_bottom_menu {
        display: flex;
        flex-direction: column;
        gap: 2.6rem;
    }
}

